-
Bug
-
Resolution: Done
-
P2: Important
-
5.15
-
None
-
-
82e8864f497af2b2a54d8308c793ebd1ecfc3be4 (qt/qtquick3d/5.14)
Some effects have started crashing on Linux with "*** stack smashing detected ***: <unknown> terminated"
Happens with Flip and Scatter effects.
This did not happen a week or two ago.
| For Gerrit Dashboard: QTBUG-82362 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 291466,4 | Fix crash when setting boolean uniforms | 5.14 | qt/qtquick3d | Status: MERGED | +2 | 0 |
| 291700,2 | Fix crash when setting boolean uniforms | 5.15 | qt/qtquick3d | Status: MERGED | 0 | 0 |