Fix crash when setting boolean uniforms

This only happened in release mode, most likely due to more generous
stack frames sizes or something like that. It's a bit unclear why the
data was written back, but it shouldn't be needed and we now use the
right type.

Fixes: QTBUG-82362
Change-Id: Ibad63e21a03df364d5d8a6c2e6d8a017de9a6308
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>